--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,23 +3,41 @@ body{
 	font-family: sans-serif;
 	color: #333;
 }
-.question{
-	font-weight: 600;
-}
-.answers {
-    margin-bottom: 20px;
-}
-#submit{
-	font-family: sans-serif;
-	font-size: 20px;
-	background-color: #297;
+
+.quizInfo{
+	background-color: rgb(1, 5, 219);
 	color: #fff;
-	border: 0px;
+	border: 10px auto 10px auto;
 	border-radius: 3px;
 	padding: 20px;
 	cursor: pointer;
-	margin-bottom: 20px;
+	margin: 20px auto;
+	width: 70%;
+	text-align: center;
 }
-#submit:hover{
+
+.preQuizInfo{
+	font-size: 32px;
+	font-weight: 600;
+	padding: 10px;
+}
+
+.question{
+	font-weight: 600;
+	margin: 5px auto 5px auto;
+	text-align: center;
+}
+
+.option{
+	background-color: #297;
+	color: #fff;
+	border: 10px auto 10px auto;
+	border-radius: 3px;
+	padding: 20px;
+	cursor: pointer;
+	margin: 20px auto;
+	width: 30%;
+}
+.option:hover{
 	background-color: #3a8;
 } 
