--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,6 +4,11 @@ body{
 	color: #333;
 }
 
+.hero {
+display: flex;
+justify-content: space-between;
+}
+
 .quizInfo{
 	background-color: rgb(1, 5, 219);
 	color: #fff;
@@ -41,3 +46,18 @@ body{
 .option:hover{
 	background-color: #3a8;
 } 
+.showScores {
+    display: flex;
+    justify-content: center;
+    background-color: rgb(1, 5, 219);
+	color:#fff;
+    border-radius: 3px;
+	padding: 20px;
+	cursor: pointer;
+	margin: 20px auto;
+	width: 30%;
+}
+
+.hidden {
+	color: #fff;
+}
